# numbers

./: .gitignore  CMakeLists.txt  NumbersConfig.h  NumbersConfig.h.in  README.md  file_processing.py
src/: .gitignore  CMakeLists.txt  main.cpp  numbers.cpp  numbers.h  numbers.hpp
